[gd_scene load_steps=6 format=3 uid="uid://bqrn7bb8oo7sr"]

[ext_resource type="Script" uid="uid://5ab6krqvweer" path="res://Legacy/PuzzleRace/puzzle_race.gd" id="1_swcei"]
[ext_resource type="PackedScene" uid="uid://b6im1jbu6vwgk" path="res://Legacy/UI/RandomMatchUI/win_screen.tscn" id="2_bfoyf"]
[ext_resource type="PackedScene" uid="uid://bjgc08ala0h7v" path="res://Legacy/Background/Background.tscn" id="3_mx5nl"]
[ext_resource type="PackedScene" uid="uid://dsd3ai7xtupa" path="res://Legacy/Color_circles/Player Color/player_color.tscn" id="5_tam2p"]
[ext_resource type="PackedScene" uid="uid://db3kggeq1vlgj" path="res://Legacy/Color_circles/Main Color/Main_Color.tscn" id="6_ml5h3"]

[node name="PuzzleRace" type="Node2D"]
script = ExtResource("1_swcei")

[node name="WinScreen" parent="." instance=ExtResource("2_bfoyf")]
visible = false

[node name="Background" parent="." instance=ExtResource("3_mx5nl")]
layer = -19

[node name="PlayerColor" parent="." instance=ExtResource("5_tam2p")]
position = Vector2(91, 319)

[node name="MainColor" parent="." instance=ExtResource("6_ml5h3")]
position = Vector2(1000, 291)

[node name="Row1" type="VBoxContainer" parent="."]
offset_left = 281.0
offset_top = 131.0
offset_right = 459.0
offset_bottom = 514.0
theme_override_constants/separation = 150
alignment = 1

[node name="Row2" type="VBoxContainer" parent="."]
offset_left = 521.0
offset_top = 119.0
offset_right = 699.0
offset_bottom = 502.0
theme_override_constants/separation = 150
alignment = 1

[node name="Row3" type="VBoxContainer" parent="."]
offset_left = 733.0
offset_top = 127.0
offset_right = 911.0
offset_bottom = 510.0
theme_override_constants/separation = 150
alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 12.0
offset_top = 6.0
offset_right = 1138.0
offset_bottom = 150.0
theme_override_colors/font_color = Color(0.021434637, 0.021434635, 0.021434633, 1)
theme_override_font_sizes/font_size = 34
text = "Click on one color from each row to match your color to the target color!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="RestartButton" type="Button" parent="."]
offset_left = 27.0
offset_top = 516.0
offset_right = 125.0
offset_bottom = 571.0
text = "Restart?"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
